# HumanoidRLSimEnv

./: README.md  evaluate.py  main.py  pyproject.toml  train.py
configs/: ppo_humanoid.yaml
robottraining/: __init__.py  rewards.py  terminations.py
robottraining/assets/: flat_humanoid.xml
robottraining/envs/: __init__.py  humanoid.py
robottraining/rl/: __init__.py  config.py  evaluation.py  training.py
tests/: test_env.py  test_eval_config.py  test_rewards.py
