[project]
name = "robottraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29",
    "imageio>=2.35",
    "mujoco>=3.1",
    "numpy>=1.26",
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
